# PRG1_tanks_game

./: Hra tanky.docx  README.md
Tanky/: CMakeLists.txt
Tanky/Tanky/: CMakeLists.txt  Tanky.cpp  Tanky.h  strelba.cpp  strelba.h
zaloha_soubory/: herni_plan_3h.txt  herni_plan_4h.txt  uvod.txt
